LDEV-4054: Updating Greek

--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:51:36 CST 2017 
  
 #=================== labels for Notebook =================# 
 
@@ -14,30 +14,17 @@ activity.helptext  =\u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac
 pageTitle.authoring  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
 button.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 button.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-button.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
-button.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2
 label.authoring.basic.content  =\u03a0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf
 label.authoring.basic.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 advanced.lockOnFinished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af
 advanced.allowRichEditor  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9  \u03b7 \u03c7\u03c1\u03ae\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03b5\u03bc\u03c0\u03bb\u03bf\u03c5\u03c4\u03b9\u03c3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03c4\u03ae \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
-instructions.onlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03bc\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.offlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOnlineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOfflineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.type.online  =\u03a3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-instructions.type.offline  =\u03a7\u03c9\u03c1\u03af\u03c2 \u0391\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 label.filename  =\u039f\u03bd\u03bf\u03bc\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 label.type  =\u03a4\u03cd\u03c0\u03bf\u03c2
-label.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
-link.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
-link.download  =\u039b\u03ae\u03c8\u03b7
-link.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 message.updateSuccess  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u0391\u03bb\u03bb\u03b1\u03b3\u03ce\u03bd
 message.unsavedChanges  =\u0397 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c0\u03b5\u03c1\u03b9\u03ad\u03c7\u03b5\u03b9 \u03bc\u03b7 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2
 pageTitle.learning  =\u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf \u03b3\u03b9\u03b1 \u039c\u03b5 \u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 message.defineLaterSet  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03c3\u03b5\u03b9 \u03bf \u03b5\u03ba\u03c0\u03b9\u03b1\u03b4\u03b5\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b1 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03b1 \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-message.runOfflineSet  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b4\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf\u03bd \u03b5\u03c0\u03bf\u03c0\u03c4\u03b7 \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 pageTitle.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03b1\u03c1\u03af\u03bf\u03c5
 button.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
 button.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
@@ -46,7 +33,6 @@ titleHeading.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
 titleHeading.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 titleHeading.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 titleHeading.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-titleHeading.exportPortfolio  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd
 heading.group  =\u039f\u03bc\u03ac\u03b4\u03b1 {0}
 heading.totalLearners  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2  \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd
 heading.totalLearnersInGroup  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03cc\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2  \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd \u03c3\u03c4\u03b7\u03bd \u03bf\u03bc\u03ac\u03b4\u03b1:
@@ -89,7 +75,6 @@ label.off  =\u039a\u03bb\u03b5\u03b9\u03c3\u03c4\u03cc
 monitor.summary.th.advancedSettings  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
 button.conditions  =\u038c\u03c1\u03bf\u03b9
 textsearch.excluded.words  =\u03bd\u03b1 \u03bc\u03b7\u03bd \u03ad\u03c7\u03b5\u03c4\u03b5 \u03ba\u03b1\u03bc\u03af\u03b1 \u03b1\u03c0\u03cc \u03b1\u03c5\u03c4\u03ad\u03c2 \u03c4\u03b9\u03c2 \u03b1\u03bd\u03b5\u03c0\u03b9\u03b8\u03cd\u03bc\u03b7\u03c4\u03b5\u03c2 \u03bb\u03ad\u03be\u03b5\u03b9\u03c2:
-label.authoring.heading.instructions.desc  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03cc\u03c1\u03bf\u03c5\u03c2
 label.authoring.heading.conditions  =\u038c\u03c1\u03bf\u03b9
 label.authoring.conditions.add.condition  =\u03a0\u03c1\u03bf\u03b8\u03ae\u03ba\u03b7 \u03cc\u03c1\u03bf\u03c5
 label.authoring.conditions.list.title  =\u038c\u03c1\u03bf\u03b9
@@ -119,6 +104,24 @@ monitor.summary.notification  =\u0393\u03bd\u03c9\u03c3\u03c4\u03bf\u03c0\u03bf\
 monitor.summary.date.restriction.set  =\u0388\u03c7\u03b5\u03b9 \u03bf\u03c1\u03b9\u03c3\u03c4\u03b5\u03af \u03c7\u03c1\u03bf\u03bd\u03b9\u03ba\u03cc\u03c2 \u03c0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2
 monitor.summary.date.restriction.removed  =\u039f \u03c7\u03c1\u03bf\u03bd\u03b9\u03ba\u03cc\u03c2 \u03c0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03b1\u03c6\u03b1\u03b9\u03c1\u03b5\u03b8\u03b5\u03af
 output.desc.all.users.entries.definition.notebook  =\u039f\u03b9 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2 \u03ba\u03ac\u03b8\u03b5 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5 \u03c3\u03c4\u03bf \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf
+button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+message.monitoring.summary.no.session  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03c5\u03bd \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b5\u03c2 \u03b5\u03bd\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2
+label.notify.learner  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae email \u03bc\u03b5 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03c3\u03c4\u03bf\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf
+event.teacher.comment.subject  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c3\u03b1\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03b1\u03c6\u03ae\u03c3\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03bf \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03ac \u03c0\u03bf\u03c5 \u03ad\u03c7\u03b5\u03c4\u03b5 \u03b3\u03c1\u03ac\u03c8\u03b5\u03b9 \u03c3\u03c4\u03bf \u03c3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf.
+event.teacher.comment.body  =\u03a3\u03c7\u03cc\u03bb\u03b9\u03bf: {0}
+label.click.to.edit  =\u039a\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03b3\u03b9\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
+label.notebook.entries  =\u03a3\u03b7\u03bc\u03b5\u03b9\u03ce\u03c3\u03b5\u03b9\u03c2
+label.user.name  =\u038c\u03bd\u03bf\u03bc\u03b1
+label.comment  =\u03a3\u03c7\u03cc\u03bb\u03b9\u03bf
+label.no.entry  =\u039a\u03b1\u03bc\u03bc\u03af\u03b1 \u03c3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7
+label.yes  =\u039d\u03b1\u03af
+label.no  =\u038c\u03c7\u03b9
+label.reply.comment  =\u03a3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03b9\u03ba\u03bf\u03cd
+message.session.name  =\u039f\u03bc\u03ac\u03b4\u03b1
+label.editing.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+basic.forceResponse  =\u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7;
+message.learner.blank.alertforceResponse  =\u0397 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9
 
 
-#======= End labels: Exported 113 labels for el GR =====
+#======= End labels: Exported 116 labels for el GR =====
