--- a/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:21:27 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:59:07 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -57,8 +57,6 @@ error.releasemarks.fail  =\u0397 \u03b1\u03bd\u03b1\u03ba\u03bf\u03af\u03bd\u03c
 error.markhigher  =\u039f \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b9\u03ba\u03c1\u03cc\u03c4\u03b5\u03c1\u03bf\u03c2 \u03ae \u03af\u03c3\u03c9\u03c2 \u03b1\u03c0\u03cc \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b5\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf
 error.cellsave  =\u03a0\u03c1\u03cc\u03b2\u03bb\u03b7\u03bc\u03b1 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7\u03c2 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03ba\u03b5\u03bb\u03b9\u03bf\u03cd, \u03c0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03b5\u03c0\u03b9\u03ba\u03bf\u03b9\u03bd\u03c9\u03bd\u03ae\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03bf \u03b4\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae \u03c4\u03bf\u03c5 \u03c3\u03c5\u03c3\u03c4\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2.
 label.error  =\u039b\u03ac\u03b8\u03bf\u03c2
-gradebook.export.excel.1  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
-gradebook.export.excel.2  =\u03b2\u03b1\u03b8\u03bc\u03ce\u03bd \u03c3\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03b9\u03ba\u03bf\u03cd \u03c6\u03cd\u03bb\u03bb\u03bf\u03c5.
 gradebook.export.activity  =\u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
 gradebook.export.activities  =\u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2
 gradebook.export.outputs  =\u0391\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1
@@ -86,8 +84,6 @@ gradebook.coursemonitor.wait  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce 
 gradebook.exportcourse.current.activity  =\u03a4\u03c1\u03ad\u03c7\u03bf\u03c5\u03c3\u03b1 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1: {0}
 gradebook.gridtitle.lesson.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u039c\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2
 gradebook.gridtitle.learner.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5
-label.select  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5
-label.lessons.to.export  =\u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae.
 label.button.export  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
 label.lessons  =\u039c\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1
 label.group  =\u039f\u03bc\u03ac\u03b4\u03b1
@@ -106,6 +102,8 @@ button.help  =\u0392\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1
 button.help.tooltip  =\u0391\u03bd\u03bf\u03af\u03be\u03c4\u03b5 \u03c4\u03b7 \u03b2\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1
 gradebook.monitor.show.dates  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03b9\u03ce\u03bd
 gradebook.monitor.hide.dates  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03b9\u03ce\u03bd
+gradebook.export.excel  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u0392\u03b1\u03b8\u03bc\u03ce\u03bd
+label.select.lessons.to.export  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
 
 
-#======= End labels: Exported 100 labels for el GR =====
+#======= End labels: Exported 98 labels for el GR =====
