--- a/lams_tool_chat/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:51:09 CST 2017 
  
 #=================== labels for Chat =================# 
 
@@ -14,30 +14,20 @@ activity.helptext  =\u03a3\u03cd\u03b3\u03c7\u03c1\u03bf\u03bd\u03bf\u03c2 \u039
 pageTitle.authoring  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1\u03c2
 button.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 button.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-button.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
-button.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2:
 label.authoring.basic.content  =\u03a0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf
 label.authoring.basic.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 advanced.lockOnFinished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af
 advanced.filteringEnabled  =\u03a6\u03af\u03bb\u03c4\u03c1\u03bf \u039c\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
-instructions.onlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03bc\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.offlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOnlineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOfflineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
 instructions.type.online  =\u03a3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 instructions.type.offline  =\u03a7\u03c9\u03c1\u03af\u03c2 \u0391\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 label.filename  =\u039f\u03bd\u03bf\u03bc\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 label.type  =\u03a4\u03cd\u03c0\u03bf\u03c2
-label.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
 link.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
-link.download  =\u039b\u03ae\u03c8\u03b7
 link.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 message.updateSuccess  =\u039f\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03b8\u03b7\u03ba\u03b1\u03bd
-message.unsavedChanges  =\u0397 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c0\u03b5\u03c1\u03b9\u03ad\u03c7\u03b5\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c0\u03bf\u03c5 \u03b4\u03b5\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03b8\u03b5\u03af
 pageTitle.learning  =\u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 message.defineLaterSet  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2.
-message.runOfflineSet  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b4\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf\u03bd \u03b5\u03c0\u03bf\u03c0\u03c4\u03b7 \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 pageTitle.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1\u03c2
 button.summary  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
 button.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
@@ -46,7 +36,6 @@ titleHeading.summary  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
 titleHeading.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 titleHeading.statistics  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
 titleHeading.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-titleHeading.exportPortfolio  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03c7\u03b1\u03c1\u03c4\u03bf\u03c6\u03c5\u03bb\u03b1\u03ba\u03af\u03bf\u03c5
 heading.group  =\u039f\u03bc\u03ac\u03b4\u03b1 {0}:
 heading.totalLearners  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd
 heading.totalLearnersInGroup  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03cc\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2   \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd \u03c3\u03c4\u03b7\u03bd \u039f\u03bc\u03ac\u03b4\u03b1
@@ -72,15 +61,6 @@ button.next  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf
 label.save  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 label.cancel  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
 error.missingParam  =\u0391\u03b4\u03cd\u03bd\u03b1\u03c4\u03b7 \u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1. \u039b\u03b5\u03af\u03c0\u03b5\u03b9 {0}
-error.exceedMaxFileSize  =\u03a4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03ad\u03c7\u03b5\u03b9 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b5\u03af \u03c4\u03bf \u03b5\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03c4\u03cc \u03cc\u03c1\u03b9\u03bf.
-error.exception.NbApplication  =\u0388\u03bd\u03b1 \u03b5\u03c3\u03c9\u03c4\u03b5\u03c1\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2 \u03c3\u03c5\u03bd\u03ad\u03b2\u03b7 \u03bc\u03b5 \u03c4\u03bf \u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1\u03c2.
-error.contentrepository  =\u0388\u03bd\u03b1 \u03bb\u03ac\u03b8\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03b5\u03bc\u03c6\u03b1\u03bd\u03b9\u03c3\u03c4\u03b5\u03af \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7/\u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03bf\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd. \u03a4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03b1 \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03bc\u03b7\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03b8\u03bf\u03cd\u03bd \u03c3\u03c9\u03c3\u03c4\u03ac.
-error.content.locked  =\u03a4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03ad\u03c7\u03b5\u03b9 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03b1\u03c6\u03bf\u03cd \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03cc \u03ad\u03bd\u03b1\u03bd \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 . \u0397 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9.
-error.defineLater  =\u039b\u03c5\u03c0\u03bf\u03cd\u03bc\u03b1\u03c3\u03c4\u03b5, \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03b1\u03c4 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03c4\u03bf\u03b9\u03bc\u03b7 \u03b1\u03ba\u03cc\u03bc\u03b7. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03c4\u03bf \u03b4\u03ac\u03c3\u03ba\u03b1\u03bb\u03bf \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c0\u03bf\u03c5 \u03c3\u03c4\u03b5\u03af\u03bb\u03b1\u03c4\u03b5 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b5\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03c9\u03bd {0} bytes.
-error.mandatoryField  ={0} \u03c0\u03b5\u03b4\u03af\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 \u03c5\u03c0\u03bf\u03c7\u03c1\u03b5\u03c9\u03c4\u03b9\u03ba\u03cc.
-error.mark.invalid.number  =\u03a4\u03bf {0} \u03c0\u03b5\u03b4\u03af\u03bf \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2. \u03b4\u03b5\u03ba\u03b1\u03b4\u03b9\u03ba\u03ac \u03c3\u03b7\u03bc\u03b5\u03af\u03b1 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03bf\u03bd\u03c4\u03b1\u03b9
-error.mark.invalid.decimal.number  =\u03a4\u03bf {0} \u03c0\u03b5\u03b4\u03af\u03bf \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1\u03c2 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf\u03c2 \u03b4\u03b5\u03ba\u03b1\u03b4\u03b9\u03ba\u03cc\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03bd\u03b1 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2;
 pageTitle.monitoring.chatHistory  =\u0399\u03c3\u03c4\u03bf\u03c1\u03b9\u03ba\u03cc \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1\u03c2
 button.try.again  =\u03a0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b7\u03c3\u03b5 \u03c0\u03ac\u03bb\u03b9
@@ -134,6 +114,11 @@ monitor.summary.date.restriction.set  =\u0388\u03c7\u03b5\u03b9 \u03c4\u03b5\u03
 monitor.summary.date.restriction.removed  =\u0388\u03c7\u03b5\u03b9 \u03b1\u03c6\u03b1\u03b9\u03c1\u03b5\u03b8\u03b5\u03af \u03bf \u03c0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1\u03c2/\u038f\u03c1\u03b1\u03c2
 output.desc.all.users.messages.output.definition.chat  =\u03a4\u03b1 \u03bc\u03b7\u03bd\u03ae\u03bc\u03b1\u03c4\u03b1 \u03ba\u03ac\u03b8\u03b5 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5 \u03c0\u03bf\u03c5 \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03b1\u03bb\u03b5\u03af \u03c3\u03c4\u03b7 \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1 (Chat)
 button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03a5\u03c0\u03bf\u03b2\u03bf\u03bb\u03ae\u03c2
+label.reflections  =\u03a3\u03ba\u03ad\u03c8\u03b5\u03b9\u03c2
+label.chat.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03af\u03b1\u03c2
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
+output.desc.learner.number.of.posts  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
 
 
-#======= End labels: Exported 128 labels for el GR =====
+#======= End labels: Exported 113 labels for el GR =====
