--- a/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:59:34 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:55:19 CST 2017 
  
 #=================== labels for Data Collection =================# 
 
@@ -174,7 +174,6 @@ label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3
 label.monitoring.user.fullname  =\u038c\u03bd\u03bf\u03bc\u03b1
 label.monitoring.heading.access  =\u039b\u03af\u03c3\u03c4\u03b1 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 label.monitoring.reflection.heading  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ce\u03bd \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
-message.monitoring.edit.activity.not.editable  =\u0391\u03c5\u03c4\u03ae \u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03bb\u03ad\u03bf\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7
 message.monitoring.summary.no.session  =\u039a\u03b1\u03bd\u03ad\u03bd\u03b1\u03c2 \u03b5\u03ba\u03b1\u03c0\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1.
 message.monitoring.summary.no.question.for.group  =\u039a\u03b1\u03bc\u03bc\u03af\u03b1 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b7 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7\u03bd \u03bf\u03bc\u03ac\u03b4\u03b1.
 label.export.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03a6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u0395\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd \u03c4\u03b7\u03c2 \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
@@ -252,6 +251,10 @@ label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
 label.monitoring.average.number.records.heading  =\u039c\u03ad\u03c3\u03bf\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ce\u03bd
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
+errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2: {0}
+error.attachment.executable  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03ba\u03c4\u03b5\u03bb\u03ad\u03c3\u03b9\u03bc\u03bf
+error.attachment.must.be.image  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03bf\u03bd\u03c4\u03b1\u03b9 \u03bc\u03bf\u03c1\u03c6\u03ad\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd: JPG, GIF \u03ae PNG.
+label.upload.info  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03ba\u03c4\u03b5\u03bb\u03ad\u03c3\u03b9\u03bc\u03bf \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03bf\u03c5 {0}
 
 
-#======= End labels: Exported 246 labels for el GR =====
+#======= End labels: Exported 249 labels for el GR =====
