--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 19 23:28:51 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:45:17 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -155,6 +155,8 @@ audit.file.delete  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c
 audit.file.restore  =\u039f \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ae\u03c2 {0} \u03b1\u03c0\u03bf\u03ba\u03b1\u03c4\u03ad\u03c3\u03c4\u03b7\u03c3\u03b5 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf {1} \u03c4\u03bf \u03bf\u03c0\u03bf\u03af\u03bf \u03b5\u03af\u03c7\u03b5 \u03b1\u03c0\u03bf\u03c3\u03c4\u03b1\u03bb\u03b5\u03af  \u03b1\u03c0\u03cc \u03c4\u03bf\u03bd/\u03c4\u03b7\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf/\u03b7 {2}.
 label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
 errors.required  ={0} \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bd\u03c4\u03b1\u03b9.
+errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c0\u03bf\u03c5 \u03b1\u03bd\u03b5\u03b2\u03ac\u03b6\u03b5\u03c4\u03b5 \u03c5\u03c0\u03b5\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2: {0}
+label.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7
 
 
-#======= End labels: Exported 149 labels for el GR =====
+#======= End labels: Exported 151 labels for el GR =====
