--- a/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:42:22 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:52:29 CST 2017 
  
 #=================== labels for Survey =================# 
 
@@ -74,7 +74,6 @@ monitoring.label.user.name  =\u038c\u03bd\u03bf\u03bc\u03b1
 label.monitoring.edit.activity.cancel  =\u0386\u03ba\u03c5\u03c1\u03bf
 label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03c9\u03c3\u03b7
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
-message.monitoring.edit.activity.not.editable  =\u0397 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03b9\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7.
 export.label.survey  =\u0388\u03c1\u03b5\u03c5\u03bd\u03b1
 error.title.empty  =\u039f \u03a4\u03af\u03c4\u03bb\u03bf\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
 label.open  =\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
@@ -183,6 +182,7 @@ label.answer.required  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u
 label.survey.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u0388\u03c1\u03b5\u03c5\u03bd\u03b1\u03c2
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
+label.summary.downloaded=  =\u0397 \u0388\u03ba\u03b8\u03b5\u03c3\u03b7 \u03bb\u03ae\u03c6\u03b8\u03b7\u03ba\u03b5
 
 
 #======= End labels: Exported 177 labels for el GR =====
