--- a/lams_tool_task/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:32:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:54:00 CST 2017 
  
 #=================== labels for Task List =================# 
 
@@ -121,7 +121,6 @@ label.monitoring.tasksummary.comments.allowed  =\u039f\u03b9 \u03b5\u03ba\u03c0\
 label.monitoring.tasksummary.comments.required  =\u0393\u03b9\u03b1 \u03c4\u03b7\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2, \u03c4\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c0\u03b1\u03c1\u03b1\u03af\u03c4\u03b7\u03c4\u03b1.
 label.monitoring.tasksummary.files.allowed  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03c0\u03c1\u03bf\u03c3\u03b8\u03ad\u03c4\u03bf\u03c5\u03bd \u03b1\u03c1\u03c7\u03b5\u03af\u03b1
 label.monitoring.tasksummary.files.required  =\u0393\u03b9\u03b1 \u03c4\u03b7\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03c4\u03b7\u03c2 \u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2 \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bd\u03c4\u03b1\u03b9 \u03b1\u03c1\u03c7\u03b5\u03af\u03b1
-message.monitoring.edit.activity.not.editable  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03bb\u03ad\u03bf\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7
 label.export.reflection  =\u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
 label.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
 label.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
@@ -167,6 +166,9 @@ label.download  =\u039b\u03ae\u03c8\u03b7
 label.confirm  =\u0395\u03c0\u03b9\u03b2\u03b5\u03b2\u03b1\u03af\u03c9\u03c3\u03b7
 label.task.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c1\u03b3\u03b1\u03c3\u03bb\u03b5\u03af\u03bf\u03c5
 label.activity.completion  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2: {0}
+error.attachment.executable  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03ba\u03c4\u03b5\u03bb\u03ad\u03c3\u03b9\u03bc\u03bf
+label.upload.info  =\u03a4\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03b5\u03bb\u03bb\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03ba\u03c4\u03b5\u03bb\u03ad\u03c3\u03b9\u03bc\u03bf \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03bf\u03c5 {0}
 
 
-#======= End labels: Exported 161 labels for el GR =====
+#======= End labels: Exported 163 labels for el GR =====
