LDEV-4314: adding label

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 29 00:22:48 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 15 15:43:34 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -566,6 +566,7 @@ authoring.fla.end.match.error  =: a branch that ends in this branching does not 
 authoring.fla.ok.button  =OK
 authoring.fla.cancel.button  =Cancel
 authoring.fla.clear.all.button  =Clear all
+authoring.fla.refresh.button  =Refresh
 authoring.fla.remove.condition.button  =Remove
 authoring.fla.properties.dialog.title  =Properties
 authoring.fla.group.naming.dialog.title  =Group Naming
@@ -592,6 +593,7 @@ authoring.fla.greater.condition.description  =Greater than or eq
 authoring.fla.default.range.condition.title.prefix  =Untitled
 authoring.fla.clear.all.confirm  =There are conditions linked to an existing branch.\\nDo you wish to remove them?
 authoring.fla.remove.condition.confirm  =This condition is linked to an existing branch.\\nDo you wish to remove it?
+authoring.fla.refresh.conditions.confirm  =You are about to update your conditions for the selected output definition.\\n\ This will clear all links to existing branches.\\nDo you wish to continue?
 authoring.fla.conditions.to.default.gate.state.confirm  =All remaining conditions will be mapped to the selected gate\\'s closed state
 authoring.fla.conditions.to.default.branch.confirm  =All remaining conditions will be mapped to the default branch
 authoring.fla.groups.to.default.branch.confirm  =All remaining groups will be mapped to the default branch
@@ -747,6 +749,7 @@ authoring.fla.activity.branching.description  =branching
 tour.prev  =Prev
 tour.next  =Next
 tour.end.tour  =End of tour
+label.search.for.courses  =Search for courses
 
 
-#======= End labels: Exported 743 labels for en AU =====
+#======= End labels: Exported 744 labels for en AU =====
