--- a/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Apr 04 10:22:06 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 17 15:42:03 CST 2017 
  
 #=================== labels for LAMS Common =================# 
 
@@ -31,7 +31,7 @@ audit.show.entry  =Show entry for user {0}. Entry was {1}
 group.name.prefix  =Group
 imported.permission.gate.title  =Permission gate
 imported.synchronise.gate.title  =Synchronise gate
-msg.import.file.format  =The import file must be a LAMS format .zip file exported from LAMS 2 or above, or a .las file exported from LAMS 1.0.2. You cannot import a design exported using the IMS Learning Design format.
+msg.import.file.format  =The import file must be a LAMS format .zip file exported from LAMS 2 or above.
 error.import.validation  =Validation error:
 error.import.matching.tool.not.found  =The activity with signature {0} is skipped because a matching tool cannot be found.
 error.import.tool.service.fail  =Unable to import tool content for tool {0}. Caused by {1}.
