LDEV-4327	:Include explainatory learner ratio tooltip

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -187,6 +187,7 @@ lesson.state  =Status:
 lesson.learners  =Learners
 lesson.class  =Class:
 lesson.manage  =Manage Lesson
+lesson.ratio.learners.tooltip = No of learners started / Total no of learners
 button.view.learners  =View/Email Learners
 button.view.learners.tooltip  =Shows all learners assigned to this lesson and allows to email them
 button.edit.class  =Edit class
