LDEV-4334: Moving Lesson Gradebook into Monitoring window so that it is always available and adding a Marks chart. Both the standalone Gradebook window (using the original call) and an "in tabs" version are supported by the existing jsp. Tweaked buttons in Course screen to match the buttons in the standalone Lesson screen.

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -105,4 +105,8 @@ gradebook.monitor.hide.dates  =Hide dates
 gradebook.export.excel  =Export grades
 label.select.lessons.to.export  =Select lessons to export
 label.simplified.export=Simplified Export (only scores)
+label.marks=Marks
+label.number.learners.in.mark.range=Number of Learners in Mark Range
+label.show.marks.chart=Show marks chart
+label.hide.marks.chart=Hide marks chart
 #======= End labels: Exported 98 labels for en AU =====
