LDEV-4334: Moving Lesson Gradebook into Monitoring window so that it is always available and adding a Marks chart.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -317,6 +317,7 @@ tour.tab.selection.content.1  =Monitoring is broken into three areas, accessed b
 tour.tab.selection.content.2  =<b>Lesson</b> gives the overall lesson details.
 tour.tab.selection.content.3  =<b>Sequence</b> gives an overview of the lesson sequence and is used to access the activities within the lesson.
 tour.tab.selection.content.4  =<b>Learners</b> shows the details about each learner.
+tour.tab.selection.content.5  =<b>Gradebook</b> shows the marks for each learner.
 tour.tab.refresh.content  =Updates the screen.
 tour.lesson.state.content.1  =Click on the current status to change the status. The lesson can be Started, Suspended, Archived or Removed.
 tour.lesson.state.content.2  =<b>Started</b> or Activated lessons are available for learners to participate in.
@@ -359,6 +360,7 @@ tour.next  =Next
 tour.more.help  =More
 tour.end.tour  =End Tour
 label.tour  =Tour
+tab.gradebook = Gradebook
 
 
 #======= End labels: Exported 352 labels for en AU =====
