LDEV-4239 Adding Gradebook tab to the Monitoring Tour

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -361,6 +361,19 @@ tour.more.help  =More
 tour.end.tour  =End Tour
 label.tour  =Tour
 tab.gradebook = Gradebook
-
+tour.gradebook.learner.grades=Grades By Learner
+tour.gradebook.learner.grades.content=View each learner in the lesson and their overall mark. Click on the + to see the details for individual activities.
+tour.gradebook.activity.grades=Grades By Activity
+tour.gradebook.activity.grades.content=View the average marks for each activity. Click on the + to see the details for learners.
+tour.gradebook.export.grades=Export Grades
+tour.gradebook.export.grades.content=Download the grades in an Excel (.xlsx) spreadsheet. 
+tour.gradebook.release.marks=Release Marks
+tour.gradebook.release.marks.content=Enable/Disable the marks being shown to Learners
+tour.gradebook.show.marks.chart=Show Marks Chart
+tour.gradebook.show.marks.chart.content=Show/Hide a graph of the marks.
+tour.gradebook.show.dates=Show Dates
+tour.gradebook.show.dates.content=Show/Hide some of the date columns in the grids to make it easier to read.
+tour.gradebook.marks.chart=Marks Chart
+tour.histogram.help.content=Click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
 
 #======= End labels: Exported 352 labels for en AU =====
