LDEV-4341 1) Add advanced settings that will contain Save button 2) If there are *no* course groupings - jump directly to the create groups page

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -755,5 +755,7 @@ label.search.for.courses  =Search for courses
 label.save.as.course.grouping  =Save as a Course Grouping
 label.enter.course.grouping.name  =Please enter name for the new course grouping
 label.course.groups.name.not.unique  =Course grouping with such name already exists. Please enter another one.
+label.save.as.course.grouping.hint  =You can save the groups as "Course groupings" so it can be used in other lessons as well. If the groups are just specifically for this lesson, you might not want to do this. Otherwise, click the button to give them a name and reuse them later.
+label.advanced.settings  =Advanced settings
 
 #======= End labels: Exported 744 labels for en AU =====
