LDEV-2999 Include a rating option for reviewed resources (authored only). To make the grouped rating of authored resources work properly, session id was added to the rating and rating comments tables and all code using the shared jRating script and shared ratings updated to store the session code. DB script updates existing rating, rating comment records.

--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -172,6 +172,8 @@ label.authoring.advanced.notify.onfileupload  =Notify instructors when a learner
 event.file.upload  ={0} uploaded a file \"{1}\"
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 error.file.type.zip  =File must be a zip file.
-
-
+label.enable.rating=Enable Rating
+label.rating=Rating
+label.average.rating  =Average rating {0}/{1} votes
+label.your.rating  =Your rating {0}, average rating {1}/{2} votes
 #======= End labels: Exported 166 labels for en AU =====
