LDEV-4341: adding labels from i18n

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 15 15:43:34 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun May 28 19:12:41 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -542,7 +542,7 @@ authoring.fla.sequence.not.selected.error  =Please choose a sequence
 authoring.fla.sequence.load.error  =Error while loading the sequence
 authoring.fla.transition.from.exists.error  =Transition from this activity already exists
 authoring.fla.export.sequence.dialog.title  =Sequence export
-authoring.fla.activity.copy.title.prefix  =Copy[0]of
+authoring.fla.activity.copy.title.prefix  =Copy [0] of
 authoring.fla.preview.lesson.default.title  =Preview
 authoring.fla.save.dialog.title  =Save sequence
 authoring.fla.open.dialog.title  =Open sequence
@@ -750,6 +750,11 @@ tour.prev  =Prev
 tour.next  =Next
 tour.end.tour  =End of tour
 label.search.for.courses  =Search for courses
+label.save.as.course.grouping  =Save as a Course Grouping
+label.enter.course.grouping.name  =Please enter name for the new course grouping
+label.course.groups.name.not.unique  =Course grouping with such name already exists. Please enter another one.
+label.save.as.course.grouping.hint  =You can save the groups as "Course groupings" so it can be used in other lessons as well. If the groups are just specifically for this lesson, you might not want to do this. Otherwise, click the button to give them a name and reuse them later.
+label.advanced.settings  =Advanced settings
 
 
-#======= End labels: Exported 744 labels for en AU =====
+#======= End labels: Exported 749 labels for en AU =====
