LDEV-4054: Updating Greek

--- a/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Apr 14 18:21:33 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun May 28 19:10:45 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -542,7 +542,7 @@ authoring.fla.sequence.not.selected.error  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1
 authoring.fla.sequence.load.error  =\u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7 \u03c6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7 \u03c4\u03b7\u03c2 \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1\u03c2
 authoring.fla.transition.from.exists.error  =\u0397 \u03bc\u03b5\u03c4\u03ac\u03b2\u03b1\u03c3\u03b7 \u03b1\u03c0\u03cc \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b1\u03c5\u03c4\u03ae \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7
 authoring.fla.export.sequence.dialog.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1\u03c2
-authoring.fla.activity.copy.title.prefix  =\u0391\u03bd\u03c4\u03b9\u03b3\u03c1\u03b1\u03c6\u03ae[0]\u03b1\u03c0\u03cc
+authoring.fla.activity.copy.title.prefix  =\u0391\u03bd\u03c4\u03b9\u03b3\u03c1\u03b1\u03c6\u03ae [0] \u03b1\u03c0\u03cc
 authoring.fla.preview.lesson.default.title  =\u03a0\u03c1\u03bf\u03b5\u03c0\u03b9\u03c3\u03ba\u03cc\u03c0\u03b7\u03c3\u03b7
 authoring.fla.save.dialog.title  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1\u03c2
 authoring.fla.open.dialog.title  =\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1 \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1\u03c2
@@ -750,6 +750,9 @@ tour.prev  =\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03b7
 tour.next  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7
 tour.end.tour  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03a0\u03b5\u03c1\u03b9\u03ae\u03b3\u03b7\u03c3\u03b7\u03c2
 label.search.for.courses  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03b3\u03b9\u03b1 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2/\u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1
+label.save.as.course.grouping  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03c9\u03c2 \u039f\u03bc\u03ac\u03b4\u03b1 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd
+label.enter.course.grouping.name  =\u0395\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u039f\u03bc\u03ac\u03b4\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7 \u03bd\u03ad\u03b1 \u03bf\u03bc\u03b1\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd
+label.course.groups.name.not.unique  =\u0397 \u03bf\u03bc\u03b1\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd \u03bc\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7. \u0395\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03ad\u03bd\u03b1 \u03ac\u03bb\u03bb\u03bf.
 
 
-#======= End labels: Exported 744 labels for el GR =====
+#======= End labels: Exported 747 labels for el GR =====
