LDEV-4274: Initial implementation of a Learner Progress Report email, to be sent to Monitors on a set of dates. Dates are entered via a new dialog box in monitoring. The code works as long as the mailserver is running when the reports are emailed but if it fails then the emails do not resend properly.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -375,5 +375,33 @@ tour.gradebook.show.dates=Show Dates
 tour.gradebook.show.dates.content=Show/Hide some of the date columns in the grids to make it easier to read.
 tour.gradebook.marks.chart=Marks Chart
 tour.histogram.help.content=Click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
-
+lesson.progress.email=Progress Email
+progress.email.send=Send Email Now
+progress.email.configure=Automatic Email Settings
+progress.email.subject=Lesson Progress: {0}
+progress.email.sent.success=[0] email(s) sent.
+export.dateheader  =Exported on:
+progress.email.send.now.question=Send the current user progress by email to yourself only now?
+progress.email.send.failed=Some problems occurred while sending emails. Please, contact your system administrator.
+progress.email.select.date.first=Please select a date first.
+progress.email.enter.two.dates.first=Please add your first two dates and then a list can be generated.
+progress.email.would.you.like.to.generate=Would you like to generate a list of dates based on your first two dates? You can then select from the list.
+progress.email.how.many.dates.to.generate=How many dates would you like generated?
+progress.email.will.be.sent.on=Emails will be sent on:
+progress.email.add.date=Add Date
+progress.email.generate.date.list=Generate Date List
+progress.email.select.date=Select Date:
+progress.email.title=Email Progress Report
+progress.email.heading.number.learners=# of Learners
+progress.email.heading.overall.progress=Overall learner's progress
+label.gate.title=Gate
+label.unknown=Unknown
+progress.email.sent.automatically=Email sent by automatically by LAMS on scheduled request
+label.activity=Activity
+label.status=Status
+tour.progress.email.send.title=Send Learner Progress Email
+tour.progress.email.send.content=Send an email with a summary of the learner progress to yourself immediately.
+tour.progress.email.configure.title=Configure Learner Progress Email Sending
+tour.progress.email.confure.content=Set up the dates to automatically send emails with a summary of learner progress to all monitors for this lesson.
+error.date.in.past=Selected date is in the past.
 #======= End labels: Exported 352 labels for en AU =====
