--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 08 21:06:51 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jun 06 23:50:12 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -187,7 +187,6 @@ lesson.state  =Status:
 lesson.learners  =Learners
 lesson.class  =Class:
 lesson.manage  =Manage Lesson
-lesson.ratio.learners.tooltip = No of learners started / Total no of learners
 button.view.learners  =View/Email Learners
 button.view.learners.tooltip  =Shows all learners assigned to this lesson and allows to email them
 button.edit.class  =Edit class
@@ -317,7 +316,6 @@ tour.tab.selection.content.1  =Monitoring is broken into three areas, accessed b
 tour.tab.selection.content.2  =<b>Lesson</b> gives the overall lesson details.
 tour.tab.selection.content.3  =<b>Sequence</b> gives an overview of the lesson sequence and is used to access the activities within the lesson.
 tour.tab.selection.content.4  =<b>Learners</b> shows the details about each learner.
-tour.tab.selection.content.5  =<b>Gradebook</b> shows the marks for each learner.
 tour.tab.refresh.content  =Updates the screen.
 tour.lesson.state.content.1  =Click on the current status to change the status. The lesson can be Started, Suspended, Archived or Removed.
 tour.lesson.state.content.2  =<b>Started</b> or Activated lessons are available for learners to participate in.
@@ -360,48 +358,52 @@ tour.next  =Next
 tour.more.help  =More
 tour.end.tour  =End Tour
 label.tour  =Tour
-tab.gradebook = Gradebook
-tour.gradebook.learner.grades=Grades By Learner
-tour.gradebook.learner.grades.content=View each learner in the lesson and their overall mark. Click on the + to see the details for individual activities.
-tour.gradebook.activity.grades=Grades By Activity
-tour.gradebook.activity.grades.content=View the average marks for each activity. Click on the + to see the details for learners.
-tour.gradebook.export.grades=Export Grades
-tour.gradebook.export.grades.content=Download the grades in an Excel (.xlsx) spreadsheet. 
-tour.gradebook.release.marks=Release Marks
-tour.gradebook.release.marks.content=Enable/Disable the marks being shown to Learners
-tour.gradebook.show.marks.chart=Show Marks Chart
-tour.gradebook.show.marks.chart.content=Show/Hide a graph of the marks.
-tour.gradebook.show.dates=Show Dates
-tour.gradebook.show.dates.content=Show/Hide some of the date columns in the grids to make it easier to read.
-tour.gradebook.marks.chart=Marks Chart
-tour.histogram.help.content=Click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
-lesson.progress.email=Progress Email
-progress.email.send=Send Email Now
-progress.email.configure=Automatic Email Settings
-progress.email.subject=Lesson Progress: {0}
-progress.email.sent.success=[0] email(s) sent.
+lesson.ratio.learners.tooltip  =Started learners / total learners
+tab.gradebook  =Gradebook
+tour.tab.selection.content.5  =<b>Gradebook</b> shows the marks for each learner.
+tour.gradebook.learner.grades  =Grades by learner
+tour.gradebook.learner.grades.content  =View each learner in the lesson and their overall mark. Click on the + to see the details for individual activities.
+tour.gradebook.activity.grades  =Grades by activity
+tour.gradebook.activity.grades.content  =View the average marks for each activity. Click on the + to see the details for learners.
+tour.gradebook.export.grades  =Export
+tour.gradebook.export.grades.content  =Download the grades in an Excel (.xlsx) spreadsheet.
+tour.gradebook.release.marks  =Release marks
+tour.gradebook.release.marks.content  =Enable/Disable the marks being shown to learners
+tour.gradebook.show.marks.chart  =Show chart
+tour.gradebook.show.marks.chart.content  =Show/hide a graph of the marks.
+tour.gradebook.show.dates  =Show dates
+tour.gradebook.show.dates.content  =Show/hide some of the date columns in the grids to make it easier to read.
+tour.gradebook.marks.chart  =Chart
+tour.histogram.help.content  =Click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+lesson.progress.email  =Email reports
+progress.email.send  =Send now
+progress.email.configure  =Schedule reports
+progress.email.subject  =LAMS lesson progress: {0}
+progress.email.sent.success  =[0] email(s) sent.
 export.dateheader  =Exported on:
-progress.email.send.now.question=Send the current user progress by email to yourself only now?
-progress.email.send.failed=Some problems occurred while sending emails. Please, contact your system administrator.
-progress.email.select.date.first=Please select a date first.
-progress.email.enter.two.dates.first=Please add your first two dates and then a list can be generated.
-progress.email.would.you.like.to.generate=Would you like to generate a list of dates based on your first two dates? You can then select from the list.
-progress.email.how.many.dates.to.generate=How many dates would you like generated?
-progress.email.will.be.sent.on=Emails will be sent on:
-progress.email.add.date=Add Date
-progress.email.generate.date.list=Generate Date List
-progress.email.select.date=Select Date:
-progress.email.title=Email Progress Report
-progress.email.heading.number.learners=# of Learners
-progress.email.heading.overall.progress=Overall learner's progress
-label.gate.title=Gate
-label.unknown=Unknown
-progress.email.sent.automatically=Email sent by automatically by LAMS on scheduled request
-label.activity=Activity
-label.status=Status
-tour.progress.email.send.title=Send Learner Progress Email
-tour.progress.email.send.content=Send an email with a summary of the learner progress to yourself immediately.
-tour.progress.email.configure.title=Configure Learner Progress Email Sending
-tour.progress.email.confure.content=Set up the dates to automatically send emails with a summary of learner progress to all monitors for this lesson.
-error.date.in.past=Selected date is in the past.
-#======= End labels: Exported 352 labels for en AU =====
+progress.email.send.now.question  =Send the current learners progress report by email to yourself only now?
+progress.email.send.failed  =Some problems occurred while sending emails. Please, contact your system administrator.
+progress.email.select.date.first  =Please select a date first.
+progress.email.enter.two.dates.first  =Please add your first two dates and then a list can be generated.
+progress.email.would.you.like.to.generate  =Would you like to generate a list of dates based on your first two dates? You can then select from the list.
+progress.email.how.many.dates.to.generate  =How many dates would you like generated?
+progress.email.will.be.sent.on  =Reports will be emailed on:
+progress.email.add.date  =Add date
+progress.email.generate.date.list  =Generate date list
+progress.email.select.date  =Date:
+progress.email.title  =Progress reports
+progress.email.heading.number.learners  =# of Learners
+progress.email.heading.overall.progress  =Overall learner's progress
+label.gate.title  =Gate
+label.unknown  =Unknown
+progress.email.sent.automatically  =Email sent by automatically by LAMS on scheduled request
+label.activity  =Activity
+label.status  =Status
+tour.progress.email.send.title  =Email learners progress reports
+tour.progress.email.send.content  =Email a summary of the learners progress to yourself immediately.
+tour.progress.email.configure.title  =Schedule progress reports
+tour.progress.email.confure.content  =Set up the dates to automatically send emails with a summary of learners progress to all monitors for this lesson.
+error.date.in.past  =Selected date is in the past.
+
+
+#======= End labels: Exported 398 labels for en AU =====
