LDEV-4351:Submit Files: include delete file button for student to remove the old file and reload a new one.

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -145,7 +145,7 @@ label.view.files  =View files
 label.deleted  =Deleted
 label.monitoring.original.learner.file.delete  =Delete
 label.monitoring.original.learner.file.restore  =Restore
-message.monitor.confirm.original.learner.file.delete  =Are you sure you want to delete the original file {0} uploaded by the learner?
+message.monitor.confirm.original.learner.file.delete  =Are you sure you want to delete the original file uploaded by the learner?
 message.monitor.confirm.original.learner.file.restore  =Are you sure you want to restore the original file {0} uploaded by the learner?
 event.file.delete.subject  =LAMS: File was deleted.
 event.file.delete.body  =An instructor deleted your file ''''{0}'''' in a Submit Files activity in LAMS. This message was send automatically, please do not reply to it.
