--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -95,7 +95,7 @@ admin.user.disable  =Disable user
 admin.user.actions  =Actions
 admin.user.import  =Import users
 admin.list.disabled.users  =List disabled accounts
-label.excel.spreadsheet  =Upload spreadsheet
+label.excel.spreadsheet  =File
 label.spreadsheet  =spreadsheet
 label.download.template  =Download the template
 role.AUTHOR  =Author
@@ -528,6 +528,8 @@ config.default.html.theme  =Default theme
 admin.user.changePassword  =Change password
 config.show.timezone.warning  =Show warning when user's LAMS timezone does not match their computer/device.
 label.password.must.lcase  =at least 1 lower case letter
-
-
+button.select.importfile  =Select file to import
+label.upload.info  =Uploaded file must be an Excel file and not exceed size of {0}
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.not.xls  =File is not an Excel .xls file.
 #======= End labels: Exported 527 labels for en AU =====
