LDEV-4305 adding new labels. LDEV-4217 Removing labels
Adding new labels for upload widget and dropping labels for LDEV-4305

Removing labels for LDEV-4217

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jan 31 17:42:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jun 13 23:35:30 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -137,7 +137,6 @@ admin.cancel  =Cancel
 admin.search  =Search
 admin.enable  =Enable
 admin.disable  =Disable
-admin.register  =Register
 sysadmin.maintain  =Maintain LAMS
 sysadmin.maintain.loginpage  =Maintain login page
 sysadmin.maintain.external.servers  =Maintain integrated servers
@@ -155,13 +154,12 @@ sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
 sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
-sysadmin.login.text  =Update the page text:
+sysadmin.login.text  =Update login page text:
 sysadmin.headline  =System Administration
 sysadmin.config.settings.edit  =Edit configuration settings
 sysadmin.batch.temp.file.delete  =Delete old temporary files
 sysadmin.job.list  =Job list
 sysadmin.list.job  =List scheduled jobs in Quartz queue
-sysadmin.register.server  =Register server
 sysadmin.edit.default.tool.content  =Edit default tool content
 cache.maintain  =Maintain LAMS cache
 cache.title  =Cache management
@@ -172,19 +170,6 @@ cache.explanation3  =Warning: If you remove a node, you will remove the node and
 cache.button.remove  =Remove
 admin.config.key  =Key
 admin.config.value  =Value
-admin.register.sitename  =Full sitename
-admin.register.orgname  =Organisation
-admin.register.directory  =Enable public directory
-admin.register.directory.public  =Public
-admin.register.directory.private  =Private
-admin.register.heading.title  =Register your server with the LAMS Community
-admin.register.server.config.title  =Server configuration
-admin.register.server.stats.title  =Server statistics
-admin.register.server.config.url  =Server URL
-admin.register.server.config.version  =Server version
-admin.register.server.config.build  =Server build no.
-admin.register.server.config.locale  =Server language (Locale)
-admin.register.server.config.langdate  =Language date
 label.show.all.users  =Show all users
 msg.group.organisation_id  =The organisation_id of this course is
 msg.subgroup.organisation_id  =The organisation_id of this subcourse is
@@ -196,7 +181,6 @@ msg.import.1  =In the spreadsheet, columns marked with a (*) are mandatory.
 msg.import.2  =Download the user template to create users.
 msg.import.conclusion  =Click the help icon above for more information.
 label.results.per.page  =Results per page
-admin.register.server.stats.total.users  =Total # of users
 msg.import.3  =Download the roles template to add users to course/subcourse and assign their roles.
 error.user.does.not.exist  =User does not exist {0}
 msg.users.created  ={0} users were created successfully.
@@ -276,7 +260,6 @@ config.xmpp.conference  =Chat server conference
 config.xmpp.admin  =Chat server admin username
 config.xmpp.password  =Chat server admin password
 config.allow.direct.lesson.launch  =Allow direct lesson launch
-config.community.enable  =Enable LAMS community
 config.allow.live.edit  =Allow Live Edit
 config.ldap.provisioning.enabled  =Enable provisioning
 config.ldap.provider.url  =LDAP server URL
@@ -341,12 +324,6 @@ config.ldap.bind.user.password  =Bind user password
 admin.user.authentication.method  =Authentication method
 config.smtp.user  =SMTP user
 config.smtp.password  =SMTP password
-admin.register.enableLamsCommunity  =Enable lamscommunity.org integration
-register.error.field  =Required field
-register.error.emailRequiredValid  =Email is required in valid format
-register.success  =Your server has successfully been registered with lamscommunity.org.
-register.error.noResponseFromLamsCommunity  =Did not get a response from lamscommunity.org.
-register.error.registrationFailed  =Registration has failed.
 config.header.red5  =Media server
 config.red5.server.url  =Media server URL
 config.red5.recordings.url  =Media server recordings URL
@@ -532,4 +509,6 @@ button.select.importfile  =Select file to import
 label.upload.info  =Uploaded file must be an Excel file and not exceed size of {0}
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.not.xls  =File is not an Excel .xls file.
-#======= End labels: Exported 527 labels for en AU =====
+
+
+#======= End labels: Exported 503 labels for en AU =====
