--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jan 31 17:42:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jun 13 23:35:30 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -154,7 +154,7 @@ sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
 sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
-sysadmin.login.text  =Update the page text:
+sysadmin.login.text  =Update login page text:
 sysadmin.headline  =System Administration
 sysadmin.config.settings.edit  =Edit configuration settings
 sysadmin.batch.temp.file.delete  =Delete old temporary files
@@ -328,7 +328,6 @@ config.header.red5  =Media server
 config.red5.server.url  =Media server URL
 config.red5.recordings.url  =Media server recordings URL
 admin.gradebook.learner.enable  =Enable Gradebook for learners
-admin.gradebook.monitor.enable  =Enable Gradebook for monitors
 sysadmin.serverUrl  =External server URL
 admin.statistics.title  =Server statistics
 admin.statistics.overall  =Overall statistics
@@ -506,6 +505,10 @@ config.default.html.theme  =Default theme
 admin.user.changePassword  =Change password
 config.show.timezone.warning  =Show warning when user's LAMS timezone does not match their computer/device.
 label.password.must.lcase  =at least 1 lower case letter
+button.select.importfile  =Select file to import
+label.upload.info  =Uploaded file must be an Excel file and not exceed size of {0}
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.not.xls  =File is not an Excel .xls file.
 
 
-#======= End labels: Exported 527 labels for en AU =====
+#======= End labels: Exported 503 labels for en AU =====
